fix: slider title contrast

--- a/src/assets/styles/global.sass
+++ b/src/assets/styles/global.sass
@@ -234,7 +234,6 @@ main
       left: 0
       padding: var(--blok-padding)
       color: white
-      mix-blend-mode: difference
   &-Exp
     padding: var(--blok-padding) 0
     display: flex
